# NOTE: Cargo.lock is intentionally committed. `core2 = 0.3.x` is yanked from
# crates.io and is a transitive dep of librustpivx — building from a fresh
# resolver without the lock would fail. Drop the lock once librustpivx
# releases a build that doesn't pull yanked core2.
[package]
name = "pivx-merchant-kit"
version = "0.1.0"
edition = "2021"
description = "Self-hosted PIVX payment processor — accept transparent and shield payments with webhooks, partial-payment handling, and refunds. No middlemen, no fees."
repository = "https://github.com/PIVX-Labs/pivx-merchant-kit"
license = "MIT"

[[bin]]
name = "pivx-merchant-kit"
path = "src/main.rs"

[dependencies]
# Shared PIVX wallet core. Pinned to a release tag for reproducible builds;
# bump when a new wallet-kit feature is needed.
pivx-wallet-kit = { git = "https://github.com/PIVX-Labs/pivx-wallet-kit", tag = "v0.2.1" }

# Wallet uses SHA-256 of the passphrase as the encryption key. The kit's
# `serialize_encrypted` takes a `&[u8; 32]`, and SHA-256's digest length
# happens to match. No PBKDF2/scrypt — the daemon's threat model is local-
# disk theft, not online cracking; an attacker with disk access typically
# also has the live unlock token anyway.
sha2 = "0.10"

# Zero-on-drop wrappers for the bip39 seed and decrypted secret material.
# wallet-kit already uses zeroize internally; we mirror the discipline at
# the daemon boundary.
zeroize = { version = "1.8", features = ["derive"] }

# HMAC for signing outbound webhook bodies. Merchants verify the
# X-Merchant-Signature header before trusting the payload.
hmac = "0.12"

# BIP39 mnemonic parsing/generation for init + import flows.
bip39 = "2"
rand_core = { version = "0.6", features = ["std"] }

# HTTP client for Blockbook + PIVX Core RPC. `rustls-tls` avoids the
# OpenSSL platform dance and keeps us consistent with sqlx's TLS backend.
# `gzip` because explorer responses for invoice-heavy wallets can be large.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# HTTP control plane. axum is the same stack PIVX Tasks uses, so anyone
# who learns one learns the other.
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }

# Direct dep on the librustpivx fork of the sapling crate so the matcher
# can deserialize SerializedNote.note (a JSON-encoded sapling::Note) and
# extract the recipient PaymentAddress + value. Resolver dedupes with
# wallet-kit's pin to a single instance — there's no duplication cost.
sapling = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }

# Secure passphrase reading: no echo on tty, plain line read from pipe.
rpassword = "7"

# Async runtime — daemon needs concurrent sync loop, HTTP server, and webhook
# delivery workers. `rt-multi-thread` enables work-stealing across cores.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "fs", "io-util", "net"] }

# Errors / logging — picked early so every stage uses the same stack.
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (config + JSON API payloads — `serde` is already pulled by
# wallet-kit, but keeping the dep explicit here so the manifest stands alone).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Invoice IDs — UUID v4 keeps them globally unique and unguessable, which
# matters because the invoice ID is used as the public payment reference.
uuid = { version = "1", features = ["v4", "serde"] }

# Storage. `runtime-tokio-rustls` plugs sqlx into the existing tokio
# runtime; `sqlite` is the embedded backend; `migrate` enables the
# `sqlx::migrate!()` macro that wires up our ./migrations/ folder.
# We deliberately use runtime-checked queries (sqlx::query) rather than
# the macro variant — no DATABASE_URL needed at build time, full test
# suite catches bad SQL.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "uuid"] }

[dev-dependencies]
tempfile = "3"

# Inherit the same transitive-dep pins as wallet-kit / agent-kit. Without these,
# the orchard/redjubjub deps pulled in by librustpivx won't resolve.
[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "c684e9185a0449efb00428f807d3bf286b5dae03" }
redjubjub = { git = "https://github.com/ZcashFoundation/redjubjub", rev = "eae848c5c14d9c795d000dd9f4c4762d1aee7ee1" }
bellman = { git = "https://github.com/Duddino/librustpivx", branch = "librustzcash-rebase" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
